# rules_rust

examples/crate_universe/wasm_unresolved_module/: Cargo.toml  MODULE.bazel
